tests/baselines/reference/AnnotationDeclarationNegative11.errors.txt
tests/cases/conformance/parser/ets/annotations/AnnotationDeclarationNegative11.ets(1,2): error TS1109: Expression expected.


==== tests/cases/conformance/parser/ets/annotations/AnnotationDeclarationNegative11.ets (1 errors) ====
    @@interface Anno {}
     ~
!!! error TS1109: Expression expected.